--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,7 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
+# Uncomment the following lines to enable the Corne RGB Underglow and Backlight
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_BACKLIGHT=y
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
